(feat) Fixed challenges heading alignment issues added toast interface.

--- a/src/app/challenges/challenges/challenges.component.scss
+++ b/src/app/challenges/challenges/challenges.component.scss
@@ -17,13 +17,9 @@
     padding: .5rem 0;
     position: fixed;
     background-color: white;
-
     z-index: 100;
-}
-
-@media screen and (max-width: 580px) {
-    .header {
-        padding-left: 1rem;
-        // height: 100%;
+    
+    &__content {
+        padding: 0 1rem;
     }
 }
