--- a/src/app/challenges/toast/toast-notification/toast-notification.component.scss
+++ b/src/app/challenges/toast/toast-notification/toast-notification.component.scss
@@ -5,7 +5,9 @@
 
 .card {
     top: 6rem;
+    top: 10rem;
     // top: 3rem;
+    // bottom: 10rem;
     position: relative;
     background: rgb(51, 51, 51);
     color: white;
